<resources>
    <string name="app_name">Bright</string>

    <!--           new section      -->
    <string name="Facebook_Login_BTN">Login with Facebook</string>
    <string name="facebook_app_id">208260130078313</string>
    <string name="fb_login_protocol_scheme">fb208260130078313</string>

    <!--           new section      -->

    <string name="Gmail_BTN">Login with Google</string>
    <string name="Twitter_BTN" translatable="false">Login with Twitter</string>
    <string name="Email_BTN">Login with Email</string>
    <string name="Visitor_BTN">Login as Visitor</string>
    <string name="noor">Bright</string>
    <string name="discover_the_world_together">Discover The World Together</string>
    <string name="phoneOREmail">Phone or Email</string>
    <string name="secretNum">Secret Number</string>
    <string name="enter">Login</string>
    <string name="name">Name</string>
    <string name="email_reg">Email</string>
    <string name="mobile_reg">Phone number</string>
    <string name="secretNum_re">Re-enter secret number</string>
    <string name="register"> Register</string>

    <string name="recent">Recent</string>
    <string name="search">search</string>
    <string name="tour_places">Tour places</string>
    <string name="discover">Discover</string>
    <string name="activities">Activities</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="you_have_not_account">You don\'t have account ?   Register Now</string>
    <!--           new section      -->
    <string name="img_des">sdsdsd</string>
    <string name="privacy">By clicking on the registration you agree to the terms of use and privacy</string>
    <string name="have_account">Already have an account? Sign in</string>
    <!--           new section - Validation-    -->
    <string name="err_email">Email address please</string>
    <string name="err_name">Enter name please</string>
    <string name="err_tel">Telephone Number please</string>
    <string name="err_password">The password should contain at least 6 characters</string>
    <string name="err_password_confirmation">Please re-enter the password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="Cars">Cars</string>
    <string name="Guide">Guide</string>
    <string name="Trips">Trips</string>
    <string name="Places">Places</string>
    <string name="choose_the_date_of_booking">Choose the date of Booking :</string>
    <string name="date_selected_is">Date Selected Is :</string>
    <string name="choose_your_ticket">Choose Your Ticket :</string>
    <string name="adult_ticket">Adult Ticket</string>
    <string name="child_ticket">Child Ticket</string>
    <string name="infant_ticket">Infant Ticket</string>
    <string name="total">Total :</string>
    <string name="do_you_want_to_book_a_car">Do you want to book a car :</string>
    <string name="book">Book</string>
    <string name="let_s_chat">Let\'s Chat</string>
    <string name="share_place">share place</string>
    <string name="favorites">Favourites</string>
    <string name="reservations">Reservations</string>
    <string name="points">POINTS</string>
    <string name="account">Account</string>
    <string name="edit">Edit</string>
    <string name="best_destinations">Best destinations</string>
    <string name="near_places">Near Places</string>
    <string name="cars_and_trips">Cars and Trips</string>
    <string name="map">Map</string>
    <string name="menu">menu</string>
    <string name="places_that_near_from">Places that near from :</string>
    <string name="choose_places">choose places</string>
    <string name="choose_cars">Choose Cars</string>
    <string name="terms_and_conditions">Terms and Conditions :</string>
    <string name="reviews">Reviews</string>
    <string name="searchnow">Search ...</string>
    <string name="bought">Bought</string>
    <string name="passengers">Passengers : </string>

    <string name="open">Open from : </string>
    <string name="to">to</string>
    <string name="phone">Phone : </string>
    <string name="language">Language</string>
    <string name="choose">Choose</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="about_us">About US</string>
    <string name="terms">Terms and conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="contactus">Contact with Us</string>
    <string name="write_your_message">Write Your Message</string>
    <string name="write_your_email">Write Your Email</string>
    <string name="time">Time Is</string>
    <string name="phone_number">Phone Number :</string>
    <string name="choose_the_time_of_booking">Choose the time of booking : </string>
    <string name="date">Date :</string>
    <string name="upcom">UPcoming</string>
    <string name="past">Past</string>
    <string name="aboutnoor">About Bright</string>
    <string name="km">KM</string>
    <string name="exit">Really Logging out?</string>
    <string name="exitnow">Are you sure you want to Log Out?</string>
    <string name="offline">There is no connection ,You are Offline</string>
    <string name="log_out">Log out</string>
    <string name="there_is_no_data">There is no data</string>
    <string name="edit_mobile">Edit Mobile</string>
    <string name="email_not_editable">Email (Not editable)</string>
    <string name="edit_your_account_information">Edit your Account information</string>
    <string name="edit_name">Edit name</string>
    <string name="submit">submit</string>
    <string name="filter">Filter</string>
    <string name="help">Help</string>
    <string name="attraction">Attractions</string>
    <string name="n"> Zaytoon ,Egypt</string>
    <string name="attractions">Attractions</string>
    <string name="contact_us_with_whats">Contact us with Whats :</string>
    <string name="for_inquiries_and_reservations">For inquiries and reservations :</string>
    <string name="customers_service">customers service :</string>
    <string name="management_and_complaints">Management and complaints :</string>
    <string name="email">Email :</string>
    <string name="address">Address :  </string>
    <string name="refund_policy">Refund policy</string>
    <string name="cancellation_policy">Cancellation policy</string>
    <string name="from_you">From You</string>


</resources>
