<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/img_des"
        android:scaleType="centerCrop"
        android:src="@drawable/bus_opacity" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/youregone"
        android:text="@string/noor"
        android:textColor="@color/logo"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="60dp"
        android:text="@string/discover_the_world_together"
        android:textColor="@color/logo"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/vistor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/border_button"
            android:onClick="getVisitor"
            android:text="@string/Visitor_BTN"
            android:textColor="@color/logo" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_button_fb"
            android:onClick="loginFace"
            android:text="@string/Facebook_Login_BTN"
            android:textColor="@android:color/background_light" />

        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/border_button_google"
                android:onClick="loginGoogle"
                android:text="@string/Gmail_BTN"
                android:textColor="@android:color/background_light" />
        </FrameLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/border_button_twitter"
            android:text="@string/Twitter_BTN"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/border_button_email"
            android:onClick="loginEmail"
            android:text="@string/Email_BTN"
            android:textColor="@android:color/background_light" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:onClick="reg"
        android:text="@string/you_have_not_account"
        android:textColor="@color/logo" />

</FrameLayout>