<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/Rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Language">

        <RadioButton
            android:id="@+id/Rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/arabic" />

        <RadioButton
            android:id="@+id/Rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/english" />

        <Button
            android:id="@+id/btng"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/Email_login_btn"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/choose"
            android:textColor="@color/white" />
    </RadioGroup>
</LinearLayout>


