<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fafagray"
    tools:context=".Discover_frag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/border_filter_discover">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_horizontal|center"
                    android:layout_marginStart="15dp"
                    android:text="@string/places_that_near_from"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="60dp"
                    android:gravity="start"
                    android:popupBackground="@color/Email_login_btn" />

            </LinearLayout>


        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dicsplaces"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@color/white" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/searchplace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

    <FrameLayout
        android:id="@+id/frsgplacer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/messagenodatap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/there_is_no_data"
            android:textColor="@color/logo"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/lbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/floatbtn"
            android:text="@string/map"
            android:textColor="@color/logo" />

        <Button
            android:id="@+id/rbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/floatbtnr"
            android:text="@string/menu"
            android:textColor="@color/logo" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/clickanywhere"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:id="@+id/cardfilteration"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginBottom="10dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/scrollfilter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:background="@color/white" />
        </android.support.v7.widget.CardView>
    </FrameLayout>
</FrameLayout>